global changes in RenderManager add tableToolbar sorting in AttributePanel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4027 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/analyse/Analyse.mxml
+++ b/IDE/v.01/vdom/components/analyse/Analyse.mxml
@@ -18,6 +18,7 @@
 					width="130" cornerRadius="0" enabled="false"/>
 				<mx:Button label="ok" cornerRadius="0" click="insertResourceLink();"/>
 				<mx:Spacer width="100%"/>
+				<mx:Button label="Clear View" click="res.removeAllChildren();"/>
 				<mx:Button label="Apply" click="_test();"/>
 			</mx:HBox>
 			
