added sort in ScriptEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4067 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -165,6 +165,7 @@
 				} else
 				{
 					dataXML.@Name = ssEvt.scriptName;
+					dataXML.@label = ssEvt.scriptName;
 					dataXML.@Language = "vscript";
 				}
 				
