--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" creationComplete="frstLoadXML()" viewSourceURL="srcview/index.html">
+<mx:WindowedApplication
+	
+	showStatusBar="false"
+	showGripper="false"
+	
+	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
+	xmlns:mx="http://www.adobe.com/2006/mxml" 
+	layout="absolute" creationComplete="frstLoadXML()" viewSourceURL="srcview/index.html"
+	backgroundColor="0x373739"   width="700" height="600" titleBarColors="[ 0x515151, 0x3d3d3d ]" >
 	<mx:Script>
 	<![CDATA[
 		import mx.utils.StringUtil;
@@ -73,7 +81,8 @@
 			var title:String = product.title.toString();
 			var description:String = product.description.toString();
 			var language:String = product.language.toString();
-			var toc:XML = product.toc[0];
+			var toc:XML = tocToBD(product.toc[0],language, name);
+			
 			
 			// save product to data base
 			
@@ -96,15 +105,27 @@
 			// save loaded data to local diskDrive 
 			saveLoadedData(product);
 			
-			
 			// выбрать странички сохранить их на диск
 			savePages(product);
 			
-			// выбрать ресурсы и сохранить их на диск
-//			saveResources(product);
+			creatTree(toc);
 			
-			// сгенерить дерево
-//			creatTree(product);
+		}
+		
+		private function tocToBD(value:XML, lan:String, product:String):XML
+		{
+			changeStruxcture(value);
+		
+			return value ;
+			
+			function changeStruxcture(xml:XML):void
+			{
+				for each(var page:XML in xml.children())
+				{
+					page.@name = lan + "/" + product + "/"  + page.@name + ".html";
+					changeStruxcture(page);
+				}
+			}
 		}
 		
 		private function saveLoadedData(product:XML):void
@@ -141,6 +162,8 @@
 				var description:String = page.description.toString();
 				var content:String = page.content.toString();
 				var pageLocation:String = location + pageName;
+				
+				arrayOfPages[pageLocation] = true;
 //				sqlProxy.
 
 				// проверяем есть ли эта страница уже в базе. берем версию страницы ////getVersionOfPage(): string//////
@@ -250,9 +273,9 @@
 		private function creatTree(product:XML):void
 		{
 			
-			var toc:XML =  new XML();
-				toc = product.toc[0];
-			tree.dataProvider = toc;
+//			var toc:XML =  new XML();
+//				toc = product.toc[0];
+			tree.dataProvider = product;
 			tree.selectedIndex = 0;
 			tree.validateNow();
 			
@@ -289,11 +312,17 @@
 		
 		private function pageChangedHandler(event:Event):void
 		{
+			
 			var fullPath:String = html.location;
-			var index:Number = Math.max(fullPath.lastIndexOf( "/" ),fullPath.lastIndexOf( "\\") );
-			var fileName : String = fullPath.substr( index + 1 ); 
-			fileName = fileName.substring( 0, fileName.lastIndexOf( "." )  );
-			trace(fullPath);
+//			var index:Number = Math.max(fullPath.lastIndexOf( "/" ),fullPath.lastIndexOf( "\\") );
+			var index:Number =  fullPath.lastIndexOf( "Local Store");
+			var fileName : String = fullPath.substr( index + 12 ); 
+//			fileName = fileName.substring( 0, fileName.lastIndexOf( "." )  );
+//			trace(fullPath);
+			var phraseRE:RegExp = /\\/gim;
+
+			fileName = fileName.replace(phraseRE,"/"); 
+			
 			
 			if(!tree.selectedItem)
 				return;
@@ -309,7 +338,7 @@
 			{
 				navigateToURL(new URLRequest(fullPath));
 				showSelectedPage(selectedItem);
-			}	
+			}
 		}
 		
 		private function selectNecessaryItem(fileName:String):void
@@ -335,24 +364,54 @@
 			}
 		}
 		
-		private function test():void
+		private function search():void
 		{
+			accordion.selectedIndex = 1;
+			accordion.validateNow();
+				
 			pageList.dataProvider  = null;
 			pageList.dataProvider = sqlProxy.search(searchWord.text,"VdomHelp_en_US");
 		}
 	]]>
 </mx:Script>
-	<mx:Tree id="tree" x="10" y="72" width="145" height="249"
-		labelField="@title" showRoot="false" change="{treeChangeHandler(event)}" />
-	<mx:HTML id="html" x="267" y="72" width="362" height="247"
-		locationChange="{pageChangedHandler(event)}"/>
-	<mx:Button x="267" y="42" label="back" click="{html.historyBack()}"/>
-	<mx:Button x="328" y="42" label="forvatd" click="{html.historyForward()}"/>
-	<mx:Button x="105" y="327" label="Find" click="{test()}"/>
-	<mx:List  id="pageList" x="7" y="357" width="145" height="152" labelField="title"
-		change="{listChangeHandler(event)}"/>
-	<mx:Label x="273" y="413" text="sfsdfsdfsfsd sdfsdf sdf" width="162" height="84" />
-	<mx:Text x="273" y="536" text="Textdssd&#xa;sdfs" width="202" height="91"/>
-	<mx:TextInput id="searchWord" x="10" y="327" width="87"/>
 	
+<mx:VBox width="100%" height="100%" paddingLeft="5" paddingRight="5" x="0">
+	
+	<mx:HBox paddingTop="5" paddingLeft="5">
+		<mx:Button  label="back" click="{html.historyBack()}"/>
+		<mx:Button  label="forvatd" click="{html.historyForward()}"/>
+		<mx:TextInput id="searchWord" x="185" y="14" width="141"  enter="{search();}" />
+		<mx:Button  label="Find" click="{search();}"/>
+	</mx:HBox>
+	<mx:HRule width="100%" strokeColor="0x000000" shadowColor="0x555555"/>
+	<mx:HDividedBox y="60" width="100%" height="100%" >
+		<mx:Accordion id="accordion" width="155" height="100%" addedEffect="false">
+			<mx:Canvas label="Content" width="100%" height="100%">
+				<mx:Tree id="tree" width="100%" height="100%"
+				labelField="@title" showRoot="false" change="{treeChangeHandler(event)}" />
+			</mx:Canvas>
+			<mx:Canvas label="Search Result" width="100%" height="100%">
+				<mx:List  id="pageList" width="100%" height="100%" labelField="title"
+					change="{listChangeHandler(event)}"/>
+			</mx:Canvas>
+			<mx:Canvas label="Settings" width="100%" height="100%">
+				
+			</mx:Canvas>
+		</mx:Accordion>
+		<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0">
+			
+			<mx:Canvas color="#FCFBFB"  width="100%" height="25" backgroundColor="#E4E4E4" />
+			<mx:HTML id="html"  width="100%" height="100%"
+				locationChange="{pageChangedHandler(event)}"/>
+		</mx:VBox>
+	</mx:HDividedBox>
+	
+	<mx:HBox horizontalAlign="right" width="100%">
+		<mx:VBox verticalGap="1" verticalAlign="0">
+			<mx:Label text="VDOM Help Application" color="0xFFFFFF" textAlign="right" width="100%"/>
+			<mx:Label text="Copyright© 2009 - V.D.O.M. Box Internationl - All rights reserved "  color="0xFFFFFF"/>
+		</mx:VBox>
+		<mx:Image source="@Embed('../assets/label.png')"/>
+	</mx:HBox>
+</mx:VBox>		
 </mx:WindowedApplication>
