--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -6,7 +6,7 @@
 	
 	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" creationComplete="frstLoadXML()" viewSourceURL="srcview/index.html" 
+	layout="absolute" creationComplete="{creatComleatHandler()}" viewSourceURL="srcview/index.html" 
 	backgroundColor="0x373739"   width="700" height="600" titleBarColors="[ 0x666666, 0x222222 ]" title="VDOM Help Aplication" 
 	titleTextStyleName="tbStyle" titleIcon="@Embed('../assets/bookmarks.png')" xmlns:local="*">
 	<mx:Style>
@@ -16,6 +16,9 @@
 	</mx:Style>
 	<mx:Script>
 	<![CDATA[
+		import mx.controls.List;
+		import mx.events.ListEvent;
+		import mx.collections.XMLListCollection;
 		import mx.printing.FlexPrintJobScaleType;
 		import mx.printing.FlexPrintJob;
 		import mx.utils.StringUtil;
@@ -29,6 +32,8 @@
 //		private var cacheFolder:File;
 		private var fileStream:FileStream = new FileStream();
 		private var sqlProxy:SQLProxy = new SQLProxy();
+		private var pageList : List = new List();
+		
 		
 		
 		/***
@@ -38,6 +43,42 @@
 		 * 	? стрелочки лево право
 		 * 
 		 * */
+		
+		private function creatComleatHandler():void
+		{
+			pageList.percentWidth = 100; 
+			pageList.percentHeight = 100; 
+			pageList.labelField = "title";
+			pageList.addEventListener(ListEvent.CHANGE, listChangeHandler); 
+			pageList.setStyle("color", "#000000");
+			searchResult.addChild(pageList);
+			
+			var result:Object = sqlProxy.getToc();
+			var tocOfProducts : XMLListCollection = new XMLListCollection();
+			
+			if(result)
+			{
+				for (var i:String in result)
+				{
+					var tempXML : XML = result[i]["toc"];
+					for each(var child:XML in tempXML.children())
+						tocOfProducts.addItem(child);
+				}
+			}
+			
+			tree.dataProvider  = tocOfProducts;
+			
+			var pages : Object = sqlProxy.getPages();
+			if(pages)
+			{
+				for (i in pages)
+				{
+					var name :String = pages[i]["name"];
+					arrayOfPages[name] = true;
+				}
+			}
+			
+		}
 		
 		// start loading 1-st XML 
 		private function frstLoadXML():void
@@ -124,7 +165,7 @@
 			// выбрать странички сохранить их на диск
 			savePages(product);
 			
-			creatTree(toc);
+//			creatTree(toc);
 			
 		}
 		
@@ -309,7 +350,7 @@
 			
 		}
 		
-		private function listChangeHandler(object:Object):void
+		private function listChangeHandler(object:ListEvent):void
 		{
 			showSelectedPage(pageList.selectedItem.name);
 			
@@ -386,12 +427,16 @@
 			accordion.validateNow();
 				
 			pageList.dataProvider  = null;
-			pageList.dataProvider = sqlProxy.search(searchWord.text,"VdomHelp_en_US");
+			pageList.dataProvider = sqlProxy.search(searchWord.text);
 			pageList.selectedItem = null;
 		}
 		
 		private function print():void
 		{
+			
+				var zzz : HTML = new  HTML();
+				zzz.htmlText = html.htmlText;
+				
 			 // Create an instance of the FlexPrintJob class.
                 var printJob:FlexPrintJob = new FlexPrintJob();
 
@@ -409,7 +454,7 @@
 	]]>
 </mx:Script>
 	
-<mx:VBox width="100%" height="100%" paddingLeft="5" paddingRight="5" x="0">
+<mx:VBox width="100%" height="100%"   x="0">
 	
 	<mx:HBox paddingTop="5" paddingLeft="5">
 		<local:LeftArrow click="{html.historyBack()}"  htmlPage="{html}"/>
@@ -419,17 +464,17 @@
 		<mx:TextInput id="searchWord" x="185" y="14" width="141"  enter="{search();}" />
 		<mx:Button  label="Search" click="{search();}" icon="@Embed('../assets/search.png')" color="#FFFFFF" 
 			fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1" borderColor="#262626" themeColor="#656565" textRollOverColor="#FFFFFF"/>
+		<mx:Button click="{frstLoadXML()}"	label="Creat DB"/>
 	</mx:HBox>
 	<mx:HRule width="100%" strokeColor="0x000000" shadowColor="0x555555"/>
-	<mx:HDividedBox y="60" width="100%" height="100%" >
+	<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
 		<mx:Accordion id="accordion" width="155" height="100%" addedEffect="false" backgroundColor="#000000" color="#FFFFFF" >
 			<mx:Canvas label="Content" width="100%" height="100%" icon="@Embed('../assets/contents.png')">
 				<mx:Tree id="tree" width="100%" height="100%" color="#000000"
 				labelField="@title" showRoot="false" change="{treeChangeHandler(event)}" />
 			</mx:Canvas>
-			<mx:Canvas label="Search Result" width="100%" height="100%" icon="@Embed('../assets/search.png')">
-				<mx:List  id="pageList" width="100%" height="100%" labelField="title"
-					change="{listChangeHandler(event)}" color="#000000"/>
+			<mx:Canvas id="searchResult" label="Search Result" width="100%" height="100%" icon="@Embed('../assets/search.png')">
+				
 			</mx:Canvas>
 			<mx:Canvas label="Bookmarks" width="100%" height="100%" icon="@Embed('../assets/bookmarks.png')">
 				
