--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -16,6 +16,9 @@
 	</mx:Style>
 	<mx:Script>
 	<![CDATA[
+		import mx.messaging.AbstractConsumer;
+		import mx.events.CloseEvent;
+		import mx.managers.PopUpManager;
 		import mx.controls.List;
 		import mx.events.ListEvent;
 		import mx.collections.XMLListCollection;
@@ -33,6 +36,8 @@
 		private var fileStream:FileStream = new FileStream();
 		private var sqlProxy:SQLProxy = new SQLProxy();
 		private var pageList : List = new List();
+		private var markList : List = new List();
+		
 		
 		
 		
@@ -53,6 +58,19 @@
 			pageList.setStyle("color", "#000000");
 			searchResult.addChild(pageList);
 			
+			markList.percentWidth = 100; 
+			markList.percentHeight = 100; 
+			markList.labelField = "title";
+			markList.addEventListener(ListEvent.CHANGE, markListChangeHandler); 
+			markList.setStyle("color", "#000000");
+			bookMarks.addChild(markList);
+			
+			updateToc();
+			
+		}
+		
+		private function updateToc():void
+		{
 			var result:Object = sqlProxy.getToc();
 			var tocOfProducts : XMLListCollection = new XMLListCollection();
 			
@@ -66,8 +84,17 @@
 				}
 			}
 			
-			tree.dataProvider  = tocOfProducts;
 			
+			tree.dataProvider  = tocOfProducts;
+			tree.validateNow();
+			tree.selectedIndex = 0;
+			
+			if(tree.selectedItem)
+			{
+				var pageName:String = tree.selectedItem.@name;
+				showSelectedPage(pageName);
+			}
+						
 			var pages : Object = sqlProxy.getPages();
 			if(pages)
 			{
@@ -77,8 +104,9 @@
 					arrayOfPages[name] = true;
 				}
 			}
-			
 		}
+		
+		
 		
 		// start loading 1-st XML 
 		private function frstLoadXML():void
@@ -326,28 +354,16 @@
 				return;
 			}
 		}
-			
-		private function creatTree(product:XML):void
-		{
-			
-//			var toc:XML =  new XML();
-//				toc = product.toc[0];
-			tree.dataProvider = product;
-			tree.selectedIndex = 0;
-			tree.validateNow();
-			
-			if(tree.selectedItem)
-			{
-				var pageName:String = tree.selectedItem.@name;
-				showSelectedPage(pageName);
-			}
-		}
 		
-			
 		private function treeChangeHandler(object:Object):void
 		{
 			showSelectedPage(tree.selectedItem.@name);
 			
+		}
+		
+		private function markListChangeHandler(evt:ListEvent):void
+		{
+			showSelectedPage(markList.selectedItem.name);
 		}
 		
 		private function listChangeHandler(object:ListEvent):void
@@ -476,6 +492,40 @@
                 printJob.send();
 
 		}
+		
+		private function markPage():void
+		{
+			if(accordion.selectedIndex == 0 && tree.selectedItem)
+			{
+				trace("Tree: " + tree.selectedItem.@name);
+				sqlProxy.mark(tree.selectedItem.@name);
+			}else 
+			if(accordion.selectedIndex == 1 && pageList.selectedItem)
+			{ 	
+				trace("PageList: " + pageList.selectedItem.name);
+				sqlProxy.mark(pageList.selectedItem.name);
+			}
+			
+			getMarkedPage();
+		}
+		
+		private function getMarkedPage():void
+		{
+			 markList.dataProvider  = sqlProxy.getMarkedPage();
+		}
+		
+		private function runSettings():void 
+		{
+				var rbWnd:Settings = Settings(PopUpManager.createPopUp(this, Settings, true));
+				rbWnd.addEventListener(CloseEvent.CLOSE, closeSettingsHandler);
+		}
+	
+		private function closeSettingsHandler(clEvt:CloseEvent):void 
+		{
+			updateToc();
+//			var ID:String = adTrEvt.treeElementID
+	
+		}
 	]]>
 </mx:Script>
 	
@@ -484,7 +534,7 @@
 	<mx:HBox paddingTop="5" paddingLeft="5">
 		<local:LeftArrow click="{html.historyBack()}"  htmlPage="{html}"/>
 		<local:RightArrow click="{html.historyForward()}"  htmlPage="{html}"/>
-		<mx:Image source="@Embed('../assets/gear_i.png')" />
+		<mx:Image source="@Embed('../assets/gear_i.png')" click="{runSettings();}" />
 		
 		<mx:TextInput id="searchWord" x="185" y="14" width="141"  enter="{search();}" />
 		<mx:Button  label="Search" click="{search();}" icon="@Embed('../assets/search.png')" color="#FFFFFF" 
@@ -495,29 +545,23 @@
 	<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
 		<mx:Accordion id="accordion" width="155" height="100%" addedEffect="false" backgroundColor="#000000" color="#FFFFFF" >
 			<mx:Canvas label="Content" width="100%" height="100%" icon="@Embed('../assets/contents.png')">
-				<mx:Tree id="tree" width="100%" height="100%" color="#000000"
-				labelField="@title" showRoot="false" change="{treeChangeHandler(event)}" />
+				<mx:Tree id="tree" width="100%" height="100%" color="#000000"  
+				labelField="@title" showRoot="true" change="{treeChangeHandler(event)}" />
 			</mx:Canvas>
-			<mx:Canvas id="searchResult" label="Search Result" width="100%" height="100%" icon="@Embed('../assets/search.png')">
-				
-			</mx:Canvas>
-			<mx:Canvas label="Bookmarks" width="100%" height="100%" icon="@Embed('../assets/bookmarks.png')">
-				
-			</mx:Canvas>
+			<mx:Canvas id="searchResult" label="Search Result" width="100%" height="100%" icon="@Embed('../assets/search.png')" show="{pageList.selectedIndex = -1}"/>
+			<mx:Canvas  id="bookMarks" label="Bookmarks" width="100%" height="100%" icon="@Embed('../assets/bookmarks.png')" show="{markList.selectedIndex = -1}"/>
 		</mx:Accordion>
 		<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0">
-			
 			<mx:Canvas color="#FCFBFB"  width="100%" backgroundColor="#E4E4E4" >
 				<mx:HBox right="0" paddingRight="10" paddingTop="5" paddingLeft="5" paddingBottom="5">
 					<mx:Image source="@Embed('../assets/printer.png')" click="{print()}"/>
-					<mx:Image source="@Embed('../assets/bookmark__plus.png')"/>
+					<mx:Image source="@Embed('../assets/bookmark__plus.png')" click="{markPage()}"/>
 				</mx:HBox>
 			</mx:Canvas>
 			<mx:HTML id="html"  width="100%" height="100%" 
 				locationChange="{pageChangedHandler(event)}"/>
 		</mx:VBox>
 	</mx:HDividedBox>
-	
 	<mx:HBox horizontalAlign="right" width="100%">
 		<mx:VBox verticalGap="1" verticalAlign="0">
 			<mx:Label text="VDOM Help Application" color="0xFFFFFF" textAlign="right" width="100%"/>
