--- a/Help/Reader/v.01/src/Settings.mxml
+++ b/Help/Reader/v.01/src/Settings.mxml
@@ -23,6 +23,7 @@
 	</mx:Style>
 	<mx:Script>
 		<![CDATA[
+			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.managers.PopUpManager;
 			import mx.events.CloseEvent;
@@ -66,6 +67,79 @@
 				
 				dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
 			}
+			
+			private var update:Update = new Update();
+			private function checkApdate():void
+			{
+				newProducts.removeAllChildren();
+				newProductArray.removeAll();
+				
+				update.addEventListener(HelpEvent.INSTALL_FILE_LOADED, installFileLoadedHandler); 
+				update.addEventListener(HelpEvent.INSTALL_FILE_LOADED_ERROR, installFileLoadedHandler); 
+				update.frstLoadXML();
+			}
+			
+			private function installFileLoadedHandler(hlEvt:HelpEvent):void
+			{
+				update.removeEventListener(HelpEvent.INSTALL_FILE_LOADED, installFileLoadedHandler); 
+				update.removeEventListener(HelpEvent.INSTALL_FILE_LOADED_ERROR, installFileLoadedHandler); 
+				
+				if(hlEvt.type == HelpEvent.INSTALL_FILE_LOADED)
+				{
+					showNewProducts(hlEvt.dataEvent);
+				} else if(hlEvt.type == HelpEvent.INSTALL_FILE_LOADED)
+				{
+					statu.text = "Check Error";
+					
+				}
+			}
+			
+			private var newProductArray:ArrayCollection = new ArrayCollection();
+			private function showNewProducts(object:Object):void
+			{
+				
+				var install:XML = XML(object);
+				update.addEventListener(HelpEvent.UPDATE_DISPLAY_LIST, updateDisplayListHandler);
+				for each(var product:XML in install.children())
+				{
+					var curProductVersion:String = sqlProxy.getVersionOfProduct(product.@name, product.@language);
+					if(curProductVersion == '' || Number(curProductVersion)< Number(product.@version))
+					{
+						var chBox:CheckBox = new CheckBox();
+							chBox.label = product.@title + " ("+ product.@size + ")" ;
+							chBox.selected = true;
+						newProducts.addChild(chBox);
+						
+						var stLabel:Label = new Label();
+						
+						
+						newProducts.addChild(stLabel);
+						
+						newProductArray.addItem({chBox:chBox, url:product.@url, productName:product.@name, stLabel:stLabel });
+					} 
+				}
+			}
+			
+			private function updateDisplayListHandler(hlEvt:HelpEvent):void
+			{
+				newProducts.validateNow();
+			}
+			
+			private function load():void
+			{
+				for(var name:String in newProductArray)
+				{
+					if(newProductArray[name]["chBox"]["selected"])
+					{
+						newProductArray[name]["stLabel"]["text"] = "Loading...";
+//						update.load(newProductArray[name]["url"], newProductArray[name]["stLabel"]);
+					}
+
+					newProducts.validateNow();
+					if(newProductArray[name]["chBox"]["selected"])
+						callLater(update.load, [newProductArray[name]["url"], newProductArray[name]["stLabel"]] );
+				}
+			}
 		]]>
 		
 	
@@ -76,9 +150,16 @@
 			<mx:Label text="Select Necessary Products: " width="100%" textAlign="center" fontSize="20"/>
 			<mx:VBox id="applications" paddingLeft="5"   borderStyle="solid" width="100%" height="100%" />
 		</mx:VBox>
-		<mx:VBox label="Update" width="100%" height="100%">
+		<mx:VBox   label="Update" width="100%" height="100%" >
 			<mx:Label text="Udate Settings" />
-			<mx:ComboBox />
+			<mx:HBox>
+				<mx:ComboBox  id="comboBox" editable="true"/>
+				<mx:Button label="Chack Update"  click="{checkApdate()}" /> 			
+			</mx:HBox>
+			<mx:Label id="statu" />
+			<mx:VBox id="newProducts" />
+			<mx:Button label="Load" click="{load()}"/>
+			
 		</mx:VBox>
 	</mx:TabNavigator>
 	<mx:ControlBar horizontalAlign="right" 
