git-svn-id: http://svn.vdombox.ru/flextools/trunk@4244 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/v.01/vdom/components/eventEditor/EventEditor.mxml
@@ -1056,6 +1056,14 @@
 				treeActions.currentObjectId = dataManager.currentObjectId;
 			}
 			
+			private function getIcon(value:Object):Class 
+			{
+				var xmlData:XML = XML(value);
+			
+				if (xmlData.@Language.toXMLString() =='python')
+					return python;
+			}
+			
 	 	]]>
 	 </mx:Script>
 	
