--- a/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -7,7 +7,7 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	layout="absolute" width="800" height="600"
 	title="Resource Browser"
-	creationComplete="{creationComplete();}"
+	creationComplete="creationCompleteHandler();"
 	showCloseButton="true"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	borderAlpha="0.95" cornerRadius="1" 
@@ -50,7 +50,7 @@
 			<mx:ComboBox id="__filterCBx" width="150" dataProvider="{filterDataProvider}" change="{applyExtensionFilter();}" />
 			<mx:VRule height="100%" />
 			<mx:Spacer width="100%" />
-			<mx:Button height="24" label="Upload File..." click="{fileUploadHandler();}"
+			<mx:Button height="24" label="Upload File..." click="uploadButton_clickHandler();"
 				icon="@Embed(source='/assets/resourceBrowserIcons/interface/upload.png')"  width="120"/>
 			
 			<!--
@@ -67,16 +67,21 @@
 					width="100%" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0"
 					horizontalGap="3" verticalAlign="middle">
 					
-					<mx:TextInput id="__nameFilter" change="{changeNameFilterHandler();}" click="{filterClickHandler();}"
+					<mx:TextInput id="__nameFilter"
+						
 						borderColor="#999999" borderStyle="solid" width="100%" color="#666666" text="type a filter here"
-						backgroundColor="#EEEEEE" fontFamily="Tahoma" fontWeight="bold" />
+						backgroundColor="#EEEEEE" fontFamily="Tahoma" fontWeight="bold" 
+						
+						change="nameFilter_changeHandler();"
+						click="nameFilter_clickHandler();"
+						/>
 						
 					<mx:Image id="__spinner" width="18" height="18" source="@Embed('/assets/common/spinner.swf')" visible="false" />
 				</mx:HBox>
 				
 				<mx:List id="__thumbsList"
 					height="100%" width="100%"
-					borderStyle="solid" change="{showResource();}"
+					borderStyle="solid" change="showResource();"
 					verticalScrollPolicy="on" horizontalScrollPolicy="off"
 					paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
 					itemRenderer="vdom.controls.resourceBrowser.ListItem" />
