ColorPicker fix for empty value Developer version
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4279 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/VdomIDE.mxml
+++ b/IDE/v.01/VdomIDE.mxml
@@ -9,6 +9,7 @@
 	
 	preinitialize="preinitalizeHandler();"
 	creationComplete="creationCompleteHandler();"
+	windowComplete="windowCompleteHandler();"
 	invoke="invokeHandler( event );"
 	
 	showTitleBar="false"
